[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Fonts/GameTitle.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/GameSubtitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Prototyping/MainMenu3DScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/PlayWithFriend.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/PlayWithRandom.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Styles/panel_menu_button.tres" type="StyleBox" id=7]
[ext_resource path="res://UI/MainMenuButton.gd" type="Script" id=8]
[ext_resource path="res://UI/Styles/create_lobby_sub.tres" type="StyleBox" id=9]
[ext_resource path="res://UI/Styles/panel_submenu.tres" type="StyleBox" id=10]
[ext_resource path="res://Assets/Sprites/copy.png" type="Texture" id=11]
[ext_resource path="res://Assets/Fonts/iosevka-extended-regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://UI/Styles/enter_lobby_panel.tres" type="StyleBox" id=13]
[ext_resource path="res://Assets/Shader/energy_crystal_ui.gdshader" type="Shader" id=14]
[ext_resource path="res://Assets/Sprites/gear - Copy.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/arrow_left.png" type="Texture" id=16]
[ext_resource path="res://Assets/Fonts/DialogFont.tres" type="DynamicFont" id=17]
[ext_resource path="res://LevelEnvironment.tres" type="Environment" id=18]

[sub_resource type="World" id=10]
environment = ExtResource( 18 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 14 )
shader_param/fill_color = null
shader_param/empty_color = null
shader_param/enabled = null
shader_param/texture_resource = ExtResource( 16 )

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 12 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform sampler2D texture_resource;

void fragment(){
	COLOR = texture(texture_resource, UV);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/texture_resource = ExtResource( 11 )

[sub_resource type="Theme" id=7]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.12549, 0.215686, 0.235294, 0.388235 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 14 )
shader_param/fill_color = Color( 0.192157, 0.192157, 0.192157, 1 )
shader_param/empty_color = null
shader_param/enabled = null
shader_param/texture_resource = ExtResource( 15 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 135.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Scavenge & Drill"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
margin_top = 139.0
margin_right = 1024.0
margin_bottom = 196.0
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
text = "a two-player co-op game"
align = 1

[node name="ViewportContainer" type="ViewportContainer" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
world = SubResource( 10 )
handle_input_locally = false
hdr = false
render_target_update_mode = 3
gui_disable_input = true

[node name="MainMenuScene" parent="ViewportContainer/Viewport" instance=ExtResource( 4 )]

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayWithFriendButton" parent="Buttons" instance=ExtResource( 5 )]
anchor_left = 0.121094
anchor_top = 0.371667
anchor_right = 0.521094
anchor_bottom = 0.914
rect_scale = Vector2( 0.717371, 0.743225 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayWithRandomButton" parent="Buttons" instance=ExtResource( 6 )]
anchor_left = 0.576172
anchor_top = 0.372
anchor_right = 0.976172
anchor_bottom = 0.914
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MatchmakingScreen" type="Control" parent="."]
visible = false
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="MatchmakingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="MatchmakingScreen/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MatchmakingScreen/Panel/CenterContainer"]
margin_left = 105.0
margin_top = 21.0
margin_right = 303.0
margin_bottom = 98.0

[node name="Looking" type="Label" parent="MatchmakingScreen/Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 207.0
margin_bottom = 21.0
text = "Looking for a player.."

[node name="Looking2" type="Label" parent="MatchmakingScreen/Panel/CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 207.0
margin_bottom = 46.0
align = 1

[node name="Cancel" type="Button" parent="MatchmakingScreen/Panel/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 207.0
margin_bottom = 77.0
text = "Cancel"

[node name="LobbyScreen" type="Control" parent="."]
visible = false
anchor_left = 0.15
anchor_top = 0.344
anchor_right = 0.85
anchor_bottom = 0.747
mouse_filter = 1

[node name="CreateLobby" type="Control" parent="LobbyScreen"]
anchor_top = 0.19
anchor_right = 0.401
anchor_bottom = 0.594
mouse_filter = 1
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="LobbyScreen/CreateLobby"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="LobbyScreen/CreateLobby/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Label" type="Label" parent="LobbyScreen/CreateLobby/Panel/CenterContainer"]
margin_left = 89.0
margin_top = 38.0
margin_right = 197.0
margin_bottom = 59.0
mouse_filter = 1
text = "Create Lobby"

[node name="Back" type="Control" parent="LobbyScreen"]
anchor_left = 0.45
anchor_top = 0.738627
anchor_right = 0.55
anchor_bottom = 0.928627
mouse_filter = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="LobbyScreen/Back"]
anchor_left = -0.197545
anchor_top = -0.435332
anchor_right = 0.802455
anchor_bottom = 0.564668
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="LobbyScreen/Back/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="LobbyScreen/Back/Panel/AspectRatioContainer"]
material = SubResource( 9 )
margin_left = 12.869
margin_right = 58.811
margin_bottom = 45.942
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="LobbyScreen/Back/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Label" type="Label" parent="LobbyScreen/Back/Panel/CenterContainer"]
margin_left = 17.0
margin_top = 12.0
margin_right = 53.0
margin_bottom = 33.0
mouse_filter = 1
text = "Back"

[node name="JoinLobby" type="Control" parent="LobbyScreen"]
anchor_left = 0.542
anchor_top = 0.17
anchor_right = 0.965
anchor_bottom = 0.599
mouse_filter = 1
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="LobbyScreen/JoinLobby"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="LobbyScreen/JoinLobby/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Label" type="Label" parent="LobbyScreen/JoinLobby/Panel/CenterContainer"]
margin_left = 106.0
margin_top = 41.0
margin_right = 196.0
margin_bottom = 62.0
mouse_filter = 1
text = "Join Lobby"

[node name="ProgressAnimator" type="Timer" parent="."]
wait_time = 1.2

[node name="JoinLobbyScreen" type="Control" parent="."]
visible = false
anchor_left = 0.1
anchor_top = 0.338
anchor_right = 0.9
anchor_bottom = 0.876

[node name="Panel" type="Panel" parent="JoinLobbyScreen"]
anchor_right = 1.0
anchor_bottom = 0.676
custom_styles/panel = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="JoinLobbyScreen/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="JoinLobbyScreen/Panel/VBoxContainer"]
margin_right = 819.0
margin_bottom = 21.0
text = "Enter the lobby code from your friend:"
align = 1

[node name="JoinLobbyID" type="TextEdit" parent="JoinLobbyScreen/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 25.0
margin_right = 819.0
margin_bottom = 60.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 3
text = "132465"

[node name="Label2" type="Label" parent="JoinLobbyScreen/Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 819.0
margin_bottom = 85.0
text = "Ctrl+V doesn't work in the Browser :("
align = 1

[node name="En" type="Panel" parent="JoinLobbyScreen/Panel/VBoxContainer"]
margin_top = 89.0
margin_right = 819.0
margin_bottom = 89.0

[node name="EnterLobbyButton" type="Control" parent="JoinLobbyScreen/Panel"]
anchor_left = 0.2
anchor_top = 0.458
anchor_right = 0.8
anchor_bottom = 0.64
mouse_filter = 1
theme = SubResource( 4 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="JoinLobbyScreen/Panel/EnterLobbyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 13 )

[node name="CenterContainer" type="CenterContainer" parent="JoinLobbyScreen/Panel/EnterLobbyButton/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="JoinLobbyScreen/Panel/EnterLobbyButton/Panel/CenterContainer"]
margin_left = 196.0
margin_top = 9.0
margin_right = 295.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="JoinLobbyScreen/Panel/EnterLobbyButton/Panel/CenterContainer/VBoxContainer"]
margin_right = 99.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Enter Lobby"
align = 1

[node name="JoinedSuccess" type="Label" parent="JoinLobbyScreen/Panel"]
unique_name_in_owner = true
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -21.0
text = "Joined the lobby successfully!"
align = 1

[node name="BackLobby" type="Control" parent="JoinLobbyScreen"]
anchor_left = 0.44
anchor_top = 0.771995
anchor_right = 0.562158
anchor_bottom = 0.961995
mouse_filter = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="JoinLobbyScreen/BackLobby"]
anchor_left = -0.0884158
anchor_top = -0.423923
anchor_right = 0.911584
anchor_bottom = 0.576077
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="JoinLobbyScreen/BackLobby/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="JoinLobbyScreen/BackLobby/Panel/AspectRatioContainer"]
material = SubResource( 9 )
margin_left = 19.3699
margin_right = 80.7019
margin_bottom = 61.332
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="JoinLobbyScreen/BackLobby/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Label" type="Label" parent="JoinLobbyScreen/BackLobby/Panel/CenterContainer"]
margin_left = 18.0
margin_top = 20.0
margin_right = 81.0
margin_bottom = 41.0
mouse_filter = 1
text = "Go Back"

[node name="CreateLobbyScreen" type="Control" parent="."]
visible = false
anchor_left = 0.1
anchor_top = 0.338
anchor_right = 0.9
anchor_bottom = 0.876

[node name="Panel" type="Panel" parent="CreateLobbyScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="CreateLobbyScreen/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CreateLobbyScreen/Panel/VBoxContainer"]
margin_right = 819.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="CreateLobbyScreen/Panel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 324.0
margin_bottom = 26.0
size_flags_vertical = 6
text = "Send this lobby code to your friend:"
align = 1

[node name="CreateLobbyID" type="TextEdit" parent="CreateLobbyScreen/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 328.0
margin_right = 783.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "132465"
readonly = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CreateLobbyScreen/Panel/VBoxContainer/HBoxContainer"]
margin_left = 787.0
margin_right = 819.0
margin_bottom = 32.0

[node name="CopyButton" type="ColorRect" parent="CreateLobbyScreen/Panel/VBoxContainer/HBoxContainer/AspectRatioContainer"]
material = SubResource( 2 )
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="CodeCopied" type="Label" parent="CreateLobbyScreen/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 36.0
margin_right = 819.0
margin_bottom = 57.0
align = 2

[node name="CodeCopied2" type="Label" parent="CreateLobbyScreen/Panel/VBoxContainer"]
margin_top = 61.0
margin_right = 819.0
margin_bottom = 106.0
text = "Note: copying to clipboard doesn't work on the web :(
You could:
- join random matchmaking at the same time
- type the code by hand
- or play on a downloaded version

PLEASE RELOAD THE PAGE IF YOU WANT TO JOIN MATCHMAKING"
align = 1

[node name="Gap" type="Control" parent="CreateLobbyScreen/Panel/VBoxContainer"]
margin_top = 110.0
margin_right = 819.0
margin_bottom = 160.0
rect_min_size = Vector2( 100, 50 )

[node name="Label2" type="Label" parent="CreateLobbyScreen/Panel/VBoxContainer"]
margin_top = 164.0
margin_right = 819.0
margin_bottom = 185.0
text = "Waiting for a player to join.."
align = 1

[node name="BackCreatedLobby" type="Control" parent="CreateLobbyScreen"]
anchor_left = 0.44
anchor_top = 0.771995
anchor_right = 0.562158
anchor_bottom = 0.961995
mouse_filter = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="CreateLobbyScreen/BackCreatedLobby"]
anchor_left = -0.078423
anchor_top = -0.114133
anchor_right = 0.921577
anchor_bottom = 0.885867
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CreateLobbyScreen/BackCreatedLobby/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CreateLobbyScreen/BackCreatedLobby/Panel/AspectRatioContainer"]
material = SubResource( 9 )
margin_left = 19.3699
margin_right = 80.7019
margin_bottom = 61.332
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="CreateLobbyScreen/BackCreatedLobby/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Label" type="Label" parent="CreateLobbyScreen/BackCreatedLobby/Panel/CenterContainer"]
margin_left = 18.0
margin_top = 20.0
margin_right = 81.0
margin_bottom = 41.0
mouse_filter = 1
text = "Go Back"

[node name="SettingsButton" type="Control" parent="."]
anchor_left = 0.893555
anchor_top = 0.853333
anchor_right = 1.0
anchor_bottom = 1.03233
rect_scale = Vector2( 0.717371, 0.743225 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="SettingsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="SettingsButton/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsButton/Panel/CenterContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 91.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="SettingsButton/Panel/CenterContainer/VBoxContainer"]
margin_right = 75.0
margin_bottom = 75.0
mouse_filter = 2
stretch_mode = 1

[node name="Image" type="ColorRect" parent="SettingsButton/Panel/CenterContainer/VBoxContainer/AspectRatioContainer"]
material = SubResource( 8 )
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
mouse_filter = 2

[node name="CreditsButton" type="Control" parent="."]
anchor_left = 0.772
anchor_top = 0.853333
anchor_right = 0.90039
anchor_bottom = 1.03233
rect_scale = Vector2( 0.717371, 0.743225 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="CreditsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="CenterContainer2" type="CenterContainer" parent="CreditsButton/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Label" type="Label" parent="CreditsButton/Panel/CenterContainer2"]
margin_left = 9.0
margin_top = 35.0
margin_right = 121.0
margin_bottom = 71.0
mouse_filter = 1
custom_fonts/font = ExtResource( 17 )
text = "Credits"
align = 1
valign = 1

[connection signal="clicked" from="Buttons/PlayWithFriendButton" to="." method="_on_PlayWithFriendButton_clicked"]
[connection signal="clicked" from="Buttons/PlayWithRandomButton" to="." method="_on_PlayWithRandomButton_clicked"]
[connection signal="pressed" from="MatchmakingScreen/Panel/CenterContainer/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="clicked" from="LobbyScreen/CreateLobby" to="." method="_on_CreateLobby_clicked"]
[connection signal="gui_input" from="LobbyScreen/CreateLobby/Panel" to="LobbyScreen/CreateLobby" method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="LobbyScreen/CreateLobby/Panel" to="LobbyScreen/CreateLobby" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="LobbyScreen/CreateLobby/Panel" to="LobbyScreen/CreateLobby" method="_on_Panel_mouse_exited"]
[connection signal="clicked" from="LobbyScreen/Back" to="." method="_on_Back_clicked"]
[connection signal="gui_input" from="LobbyScreen/Back/Panel" to="LobbyScreen/Back" method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="LobbyScreen/Back/Panel" to="LobbyScreen/Back" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="LobbyScreen/Back/Panel" to="LobbyScreen/Back" method="_on_Panel_mouse_exited"]
[connection signal="clicked" from="LobbyScreen/JoinLobby" to="." method="_on_JoinLobby_clicked"]
[connection signal="gui_input" from="LobbyScreen/JoinLobby/Panel" to="LobbyScreen/JoinLobby" method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="LobbyScreen/JoinLobby/Panel" to="LobbyScreen/JoinLobby" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="LobbyScreen/JoinLobby/Panel" to="LobbyScreen/JoinLobby" method="_on_Panel_mouse_exited"]
[connection signal="timeout" from="ProgressAnimator" to="." method="_on_ProgressAnimator_timeout"]
[connection signal="clicked" from="JoinLobbyScreen/Panel/EnterLobbyButton" to="." method="_on_EnterLobbyButton_clicked"]
[connection signal="gui_input" from="JoinLobbyScreen/Panel/EnterLobbyButton/Panel" to="JoinLobbyScreen/Panel/EnterLobbyButton" method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="JoinLobbyScreen/Panel/EnterLobbyButton/Panel" to="JoinLobbyScreen/Panel/EnterLobbyButton" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="JoinLobbyScreen/Panel/EnterLobbyButton/Panel" to="JoinLobbyScreen/Panel/EnterLobbyButton" method="_on_Panel_mouse_exited"]
[connection signal="clicked" from="JoinLobbyScreen/BackLobby" to="." method="_on_BackLobby_clicked"]
[connection signal="gui_input" from="JoinLobbyScreen/BackLobby/Panel" to="JoinLobbyScreen/BackLobby" method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="JoinLobbyScreen/BackLobby/Panel" to="JoinLobbyScreen/BackLobby" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="JoinLobbyScreen/BackLobby/Panel" to="JoinLobbyScreen/BackLobby" method="_on_Panel_mouse_exited"]
[connection signal="gui_input" from="CreateLobbyScreen/Panel/VBoxContainer/HBoxContainer/AspectRatioContainer/CopyButton" to="." method="_on_CopyButton_gui_input"]
[connection signal="clicked" from="CreateLobbyScreen/BackCreatedLobby" to="." method="_on_BackCreatedLobby_clicked"]
[connection signal="gui_input" from="CreateLobbyScreen/BackCreatedLobby/Panel" to="CreateLobbyScreen/BackCreatedLobby" method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="CreateLobbyScreen/BackCreatedLobby/Panel" to="CreateLobbyScreen/BackCreatedLobby" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="CreateLobbyScreen/BackCreatedLobby/Panel" to="CreateLobbyScreen/BackCreatedLobby" method="_on_Panel_mouse_exited"]
[connection signal="clicked" from="SettingsButton" to="." method="_on_SettingsButton_clicked"]
[connection signal="gui_input" from="SettingsButton/Panel" to="SettingsButton" method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="SettingsButton/Panel" to="SettingsButton" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="SettingsButton/Panel" to="SettingsButton" method="_on_Panel_mouse_exited"]
[connection signal="clicked" from="CreditsButton" to="." method="_on_CreditsButton_clicked"]
[connection signal="gui_input" from="CreditsButton/Panel" to="CreditsButton" method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="CreditsButton/Panel" to="CreditsButton" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="CreditsButton/Panel" to="CreditsButton" method="_on_Panel_mouse_exited"]
